# Mini-Claw-Coder

./: .gitignore  README.md  RESUME_ZH.md  pyproject.toml  run_zhipu_demo.ps1  test_compression.py  test_compression_simple.py
docs/: ENGINEERING_LOG_ZH.md
examples/: eval_tasks.jsonl
examples/bench/: runtime_smoke.json
examples/sample_skill/: SKILL.md
mini_claw/: __init__.py  cli.py  config.py  dashboard.py  doctor.py  home.py  viewer.py  workspace_policy.py
mini_claw/agent/: compaction.py  evidence.py  guardrails.py  loop.py  prompts.py  state.py  tool_output_policy.py
mini_claw/background/: __init__.py  jobs.py  runner.py
mini_claw/context/: __init__.py  file_index.py  manager.py  packet.py  (+1 more)
tests/: test_agent_compaction.py  test_agent_tool_output.py  test_background_jobs.py  test_bench.py  test_cli_background.py  test_cli_chat.py  test_cli_dashboard.py  test_cli_doctor.py  test_cli_export.py  test_cli_home.py  test_cli_memory.py  test_cli_run_execution.py  test_cli_session.py  test_cli_smoke.py  test_cli_tool_output.py  test_cli_viewer.py  test_cli_workspace.py  test_compaction.py  test_context_manager.py  test_context_packet.py  test_dashboard.py  test_doctor.py  test_failure_attribution.py  test_file_index.py  test_memory_store.py  test_openai_compatible.py  test_orchestrator.py  test_patch_tool.py  test_repo_tools.py  test_router.py  test_session_replay.py  test_session_store.py  test_skill_guardrail.py  test_skill_loader.py  test_skill_patches.py  test_task_graph.py  test_task_workspace.py  test_tool_output_lookup.py  test_trace_replay.py
(+42 files in other folders)
