[project]
name = "mini-claw-coder"
version = "0.1.0"
description = "A minimal-tool coding agent runtime with context management, routing, memory, skills, and evals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mini-claw = "mini_claw.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
